<resources>
    <string name="app_name">RentalHouseProject</string>
    <string name="call_to_owner">تماس با آگهی دهنده</string>
    <string name="show_beds_cost">مشاهده قیمت تخت ها</string>
    <string name="Show_on_map">مشاهده روی نقشه</string>
    <string name="back">بازگشت</string>
    <string name="beds_cost">قیمت تخت ها (تومان)</string>
    <string name="log_out_user">خروج از حساب کاربری</string>
    <string name="register_adds">ثبت آگهی من</string>
    <string name="select_city">انتخاب شهر</string>
    <string name="about_us">درباره ما</string>
    <string name="call_us">تماس با ما</string>
    <string name="both_type">خانه و خوابگاه</string>
    <string name="home_type">خانه</string>
    <string name="dorm_type">خوابگاه</string>
    <string name="female_gender">برای بانوان</string>
    <string name="male_gender">برای آقایان</string>
    <string name="both_gender">برای هردو</string>
    <string name="owner_register_login">ورود / ثبت نام</string>
    <string name="sliderImageFolder">http://rentalhouse.aryasoft.org/Images/SliderImages/</string>
    <string name="houseImageFolder">http://rentalhouse.aryasoft.org/Images/HouseImages/</string>
    <string name="waiting_text">لطفا کمی صبر کنید.</string>
    <string name="dearUserText">کابر گرامی</string>
    <string name="noInternetText">تلفن همراه شما به اینترنت متصل نیست.</string>
    <string name="dormText">خوابگاه</string>
    <string name="houseText">خانه</string>
    <string name="nothingFoundText">موردی پیدا نشد...</string>
    <string name="searchHintText">دنبال هرچی میگردی اینجا بنویس...</string>

    <string-array name="provinces">
        <item>استان</item>
        <item>تهران</item>
        <item>اصفهان</item>
        <item>خوزستان</item>
        <item>فارس</item>
        <item>لرستان</item>
        <item>کردستان</item>
        <item>گلستان</item>
        <item>مازندران</item>
        <item>همدان</item>
    </string-array>

    <string-array name="cities">
        <item>شهر</item>
        <item>تهران</item>
        <item>اصفهان</item>
        <item>اهواز</item>
        <item>ملایر</item>
        <item>خرم آباد</item>
        <item>کرمانشاه</item>
        <item>گرگان</item>
        <item>بابل</item>
        <item>ملایر</item>
    </string-array>

    <string-array name="types">
        <item>خوابگاه</item>
        <item>خانه</item>
        <item>هردو</item>
    </string-array>

    <string-array name="sex_types">
        <item>برای آقایان</item>
        <item>برای بانوان</item>
    </string-array>

</resources>
